lets get this show on the road

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <h1>Let Them Teach</h1>
-  <h5>crt isn't being taught in school. teachers aren't "grooming" or teaching kids to be queer. like,<strong> get a fucking grip bro.</strong></h5>
+  <h5>republicans are throwing a temper tantrum because educators are teaching their students that queer people exist.  like,<strong> get a fucking grip bro.</strong></h5>
   <h6>teachers have had a rough enough couple of years as it is before right-wing pundits decided it was their mission to vilify educators for doing their jobs.</h6>
   <hr>
   
@@ -35,8 +35,8 @@
   <br><br>
   <p>This website autogenerates randomized tips to Laura Ingraham's tipline to report teachers for, you know... teaching. The tips aren't real of course, they're mostly song lyrics. Just click the button above and send the email!*<br>
 Alternatively, you could replace my message with a new one. Feel free to spice it up!</p>
-  <p><small>*Now let's say, hypothetically, you want to send more randomized emails. Each time you refresh the page, you'll get a new email template. I promise you wont get the same result; there's over a septillion combinations.</small></p>
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Fox&#39;s Laura Ingraham created a tipline for parents to report teachers who &quot;seek to destroy a child&#39;s innocence in the name of tolerance&quot;. It&#39;d be a shame if folks sent in phony tips to the email with this website..." data-url="https://letthemteach.org" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <p><small>*Now let's say, hypothetically, you want to send more randomized emails. Each time you refresh the page, you'll get a new email template. I promise you wont get the same result; there's over a decillion combinations.</small></p>
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Fox&#39;s Laura Ingraham created a tipline for parents to report teachers who &quot;seek to destroy a child&#39;s innocence in the name of tolerance&quot;. Whatever that means. It&#39;d be a shame if folks sent in phony tips to the email with this website..." data-url="https://letthemteach.org" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <p>also, feel free to share if you feel so inclined ;)</p>
   <footer class="footer mt-auto py-3 bg-light"><small>made with ♥ by <a class='gz4c' href="https://genzforchange.org" target="_">gen-z for change</a>'s meddling kids</small></footer>
   
