--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <!--   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2ERQB4CRY"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-F2ERQB4CRY');
-  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BMM09Y57GK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BMM09Y57GK');
+</script>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -38,7 +38,9 @@ Alternatively, you could replace my message with a new one. Feel free to spice i
   <p><small>*Now let's say, hypothetically, you want to send more randomized emails. Each time you refresh the page, you'll get a new email template. I promise you wont get the same result; there's over a decillion combinations.</small></p>
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Fox&#39;s Laura Ingraham created a tipline for parents to report teachers who &quot;seek to destroy a child&#39;s innocence in the name of tolerance&quot;. Whatever that means. It&#39;d be a shame if folks sent in phony tips to the email with this website..." data-url="https://letthemteach.org" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <p>also, feel free to share if you feel so inclined ;)</p>
-  <footer class="footer mt-auto py-3 bg-light"><small>made with ♥ by <a class='gz4c' href="https://genzforchange.org" target="_">gen-z for change</a>'s meddling kids</small></footer>
+  <footer class="footer mt-auto py-3 bg-light"><small>made with ♥ by <a class='gz4c' href="https://genzforchange.org" target="_">gen-z for change</a>'s meddling kids</small><br><a class="btn btn-outline-danger" href="https://secure.actblue.com/donate/genzforchange" target="_">support our work</a>
+<!--     <a class="btn btn-outline-danger" href="" target="_">keep up with us</a> -->
+  </footer>
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
