--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Alternatively, you could replace my message with a new one. Feel free to spice i
 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Fox&#39;s Laura Ingraham created a tipline for parents to report teachers who &quot;seek to destroy a child&#39;s innocence in the name of tolerance&quot;. Whatever that means. It&#39;d be a shame if folks sent in phony tips to the email with this website..." data-url="https://letthemteach.org" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <p>also, feel free to share if you feel so inclined ;)</p>
   <footer class="footer mt-auto py-3 bg-light"><small>made with ♥ by <a class='gz4c' href="https://genzforchange.org" target="_">gen-z for change</a>'s meddling kids</small><br><a class="btn btn-outline-danger" href="https://secure.actblue.com/donate/genzforchange" target="_">support our work</a>
-    <a class="btn btn-outline-danger" href="https://genzforchange.us20.list-manage.com/subscribe?u=4cf3bdffbb8ec2dcc6d7f1ee2&id=bfd737b285" target="_">keep up with us</a>
+    <a class="btn btn-outline-danger" href="https://genzforchange.org#newsletter" target="_">keep up with us</a>
   </footer>
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
